tests/testcases/invalid/05_unterminated_string_eof.ciel
fn main() -> int {
    char* s = "no close...
}
